tests/specs/ecosystem/radix_ui_fork/react_portal/0_0_4.test
radix-ui-fork/react-portal/0.0.4
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
   */ container?: HTMLElement | null;
                  ~~~~~~~~~~~
    at file://<tmpdir>/src/Portal.tsx:9:19

